# KDD_projet

./: .gitignore  LICENSE  PROJECT_STRUCTURE.txt  README.md  TODO.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
benchmarks/: benchmark_comparison.py
docs/: ALGORITHMS.md  ARCHITECTURE.md  IMPLEMENTATION_GUIDE.md  report.tex
examples/: Séance_1_Regression.ipynb  complete_testing.ipynb  data_regression.csv  lightgbm_experiments.py  nan_noise_testing.py  real_testing.py  regression_pipeline.py
lightgbm/: __init__.py  base.py  efb.py  goss.py  histogramme.py  lgbm_classifier.py  lgbm_regressor.py  loss_functions.py  metrics.py  tree.py  utils.py
src/lightgbm/: __init__.py  base.py  efb.py  goss.py  histogram.py  lgbm_classifier.py  lgbm_regressor.py  loss_functions.py  tree.py  utils.py
tests/: test_classifier.py  test_goss.py  test_gross.py  test_histogram.py  test_logging_integration.py  test_logic_sanity.py  test_math_integrity.py  test_regressor.py  test_tree.py  test_utils.py
